--- a/styleV2.css
+++ b/styleV2.css
@@ -78,7 +78,7 @@ li {
     padding: 2px;
     width: 500px;
     height: 40px;
-    box-shadow: 0px 2px 3px lightgrey;
+    box-shadow: 0px 2px 3px lightgray;
     border-top: 1px solid rgba(211,204,202,0.4);
     border-left: 1px solid rgba(211,204,202,0.4);
 }
@@ -132,10 +132,12 @@ input [type="submit"]:hover {
 #apps-icon {
     opacity: .55;
     margin-right: 15px;
+    height: 25px;
+    width: 25px;
     display: flex;
-    box-sizing: border-box;
-    height:30px;
-    width:30px;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: -6px;
 }
 
 #sign-in { 
@@ -144,8 +146,8 @@ input [type="submit"]:hover {
     outline: none;
     background: #4285f4;
     background: -webkit-linear-gradient(top, #4387fd, #4683ea);
-    display:inline-block; /*Watch This!*/
-    line-height: 28px; /*This too!*/
+    display:inline-block; 
+    line-height: 28px;
     padding: 0 12px;
     -webkit-border-radius: 2px;
     border-radius: 2pxl;
